replace Guava and Guice usage with stream API and JSR-330 in kb-beatrix
This is 3rd and last PR of killbill-beatrix for issue 1615.