@@ -22,6 +22,7 @@ import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 
 import org.joda.time.DateTime;
 import org.joda.time.LocalDate;
@@ -41,15 +42,11 @@ import org.killbill.billing.entitlement.api.DefaultEntitlementSpecifier;
 import org.killbill.billing.invoice.api.Invoice;
 import org.killbill.billing.invoice.api.InvoiceItemType;
 import org.killbill.billing.junction.DefaultBlockingState;
-import org.killbill.billing.payment.api.PluginProperty;
 import org.killbill.billing.usage.api.SubscriptionUsageRecord;
 import org.killbill.billing.usage.api.UnitUsageRecord;
 import org.killbill.billing.usage.api.UsageRecord;
 import org.testng.Assert;
 import org.testng.annotations.Test;
-
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertNotEquals;
@@ -92,7 +89,7 @@ public class TestUsageInArrear extends TestIntegrationBase {
         Invoice curInvoice = invoiceChecker.checkInvoice(account.getId(), 2, callContext,
                                                          new ExpectedInvoiceItemCheck(new LocalDate(2012, 5, 1), new LocalDate(2013, 5, 1), InvoiceItemType.RECURRING, new BigDecimal("2399.95")),
                                                          new ExpectedInvoiceItemCheck(new LocalDate(2012, 4, 1), new LocalDate(2012, 5, 1), InvoiceItemType.USAGE, new BigDecimal("5.90")));
-        invoiceChecker.checkTrackingIds(curInvoice, ImmutableSet.of("tracking-1", "tracking-2"), internalCallContext);
+        invoiceChecker.checkTrackingIds(curInvoice, Set.of("tracking-1", "tracking-2"), internalCallContext);
 
         recordUsageData(aoSubscription.getId(), "tracking-3", "bullets", new LocalDate(2012, 5, 1), BigDecimal.valueOf(50L), callContext);
         recordUsageData(aoSubscription.getId(), "tracking-4", "bullets", new LocalDate(2012, 5, 16), BigDecimal.valueOf(300L), callContext);
@@ -100,12 +97,12 @@ public class TestUsageInArrear extends TestIntegrationBase {
         // 2012-05-16
         clock.addDays(15);
         busHandler.pushExpectedEvents(NextEvent.BLOCK, NextEvent.CANCEL, NextEvent.INVOICE, NextEvent.PAYMENT, NextEvent.INVOICE_PAYMENT);
-        aoSubscription.cancelEntitlementWithDateOverrideBillingPolicy(new LocalDate(2012, 5, 16), BillingActionPolicy.IMMEDIATE, ImmutableList.<PluginProperty>of(), callContext);
+        aoSubscription.cancelEntitlementWithDateOverrideBillingPolicy(new LocalDate(2012, 5, 16), BillingActionPolicy.IMMEDIATE, Collections.emptyList(), callContext);
         assertListenerStatus();
 
         curInvoice = invoiceChecker.checkInvoice(account.getId(), 3, callContext,
                                                  new ExpectedInvoiceItemCheck(new LocalDate(2012, 5, 1), new LocalDate(2012, 5, 16), InvoiceItemType.USAGE, new BigDecimal("11.8")));
-        invoiceChecker.checkTrackingIds(curInvoice, ImmutableSet.of("tracking-3", "tracking-4"), internalCallContext);
+        invoiceChecker.checkTrackingIds(curInvoice, Set.of("tracking-3", "tracking-4"), internalCallContext);
 
         clock.addDays(15);
         assertListenerStatus();
@@ -142,13 +139,13 @@ public class TestUsageInArrear extends TestIntegrationBase {
         recordUsageData(aoSubscription.getId(), "tracking-2", "bullets", new LocalDate(2012, 4, 15), BigDecimal.valueOf(100L), callContext);
 
         busHandler.pushExpectedEvents(NextEvent.BLOCK, NextEvent.CANCEL, NextEvent.INVOICE, NextEvent.PAYMENT, NextEvent.INVOICE_PAYMENT);
-        aoSubscription.cancelEntitlementWithDate(new LocalDate(2012, 4, 1), true, ImmutableList.<PluginProperty>of(), callContext);
+        aoSubscription.cancelEntitlementWithDate(new LocalDate(2012, 4, 1), true, Collections.emptyList(), callContext);
         assertListenerStatus();
 
 
         final Invoice curInvoice = invoiceChecker.checkInvoice(account.getId(), 2, callContext,
                                                                new ExpectedInvoiceItemCheck(new LocalDate(2012, 4, 1), new LocalDate(2012, 4, 1), InvoiceItemType.USAGE, new BigDecimal("2.95")));
-        invoiceChecker.checkTrackingIds(curInvoice, ImmutableSet.of("tracking-1"), internalCallContext);
+        invoiceChecker.checkTrackingIds(curInvoice, Set.of("tracking-1"), internalCallContext);
 
         assertListenerStatus();
     }
@@ -188,7 +185,7 @@ public class TestUsageInArrear extends TestIntegrationBase {
         Invoice curInvoice = invoiceChecker.checkInvoice(account.getId(), 2, callContext,
                                                          new ExpectedInvoiceItemCheck(new LocalDate(2012, 5, 1), new LocalDate(2013, 5, 1), InvoiceItemType.RECURRING, new BigDecimal("2399.95")),
                                                          new ExpectedInvoiceItemCheck(new LocalDate(2012, 4, 1), new LocalDate(2012, 5, 1), InvoiceItemType.USAGE, new BigDecimal("5.90")));
-        invoiceChecker.checkTrackingIds(curInvoice, ImmutableSet.of("tracking-1", "tracking-2"), internalCallContext);
+        invoiceChecker.checkTrackingIds(curInvoice, Set.of("tracking-1", "tracking-2"), internalCallContext);
 
         recordUsageData(aoSubscription.getId(), "tracking-3", "bullets", new LocalDate(2012, 5, 1), BigDecimal.valueOf(50L), callContext);
         recordUsageData(aoSubscription.getId(), "tracking-4", "bullets", new LocalDate(2012, 6, 1), BigDecimal.valueOf(300L), callContext);
@@ -196,7 +193,7 @@ public class TestUsageInArrear extends TestIntegrationBase {
         // 2012-05-16
         clock.addDays(15);
         // Cancel "EOT" (at the BCD, cannot use EOT policy as usage is billed in arrear)
-        aoSubscription.cancelEntitlementWithDate(new LocalDate(2012, 6, 1), true, ImmutableList.<PluginProperty>of(), callContext);
+        aoSubscription.cancelEntitlementWithDate(new LocalDate(2012, 6, 1), true, Collections.emptyList(), callContext);
         assertListenerStatus();
 
         // 2012-06-01
@@ -206,7 +203,7 @@ public class TestUsageInArrear extends TestIntegrationBase {
 
         curInvoice = invoiceChecker.checkInvoice(account.getId(), 3, callContext,
                                                  new ExpectedInvoiceItemCheck(new LocalDate(2012, 5, 1), new LocalDate(2012, 6, 1), InvoiceItemType.USAGE, new BigDecimal("11.8")));
-        invoiceChecker.checkTrackingIds(curInvoice, ImmutableSet.of("tracking-3", "tracking-4"), internalCallContext);
+        invoiceChecker.checkTrackingIds(curInvoice, Set.of("tracking-3", "tracking-4"), internalCallContext);
     }
 
     @Test(groups = "slow")
@@ -243,7 +240,7 @@ public class TestUsageInArrear extends TestIntegrationBase {
         Invoice curInvoice = invoiceChecker.checkInvoice(account.getId(), 2, callContext,
                                                          new ExpectedInvoiceItemCheck(new LocalDate(2012, 5, 1), new LocalDate(2013, 5, 1), InvoiceItemType.RECURRING, new BigDecimal("2399.95")),
                                                          new ExpectedInvoiceItemCheck(new LocalDate(2012, 4, 1), new LocalDate(2012, 5, 1), InvoiceItemType.USAGE, new BigDecimal("5.90")));
-        invoiceChecker.checkTrackingIds(curInvoice, ImmutableSet.of("tracking-1", "tracking-2"), internalCallContext);
+        invoiceChecker.checkTrackingIds(curInvoice, Set.of("tracking-1", "tracking-2"), internalCallContext);
 
         // Billed on 2012-06-01
         recordUsageData(aoSubscription.getId(), "tracking-3", "bullets", new LocalDate(2012, 5, 1), BigDecimal.valueOf(50L), callContext);
@@ -253,13 +250,13 @@ public class TestUsageInArrear extends TestIntegrationBase {
         // 2012-05-16
         clock.addDays(15);
         // Cancel "EOT" (at the BCD, cannot use EOT policy as usage is billed in arrear)
-        aoSubscription.cancelEntitlementWithDate(new LocalDate(2012, 6, 1), true, ImmutableList.<PluginProperty>of(), callContext);
+        aoSubscription.cancelEntitlementWithDate(new LocalDate(2012, 6, 1), true, Collections.emptyList(), callContext);
         assertListenerStatus();
 
         // 2012-05-17
         busHandler.pushExpectedEvents(NextEvent.UNCANCEL);
         clock.addDays(1);
-        aoSubscription.uncancelEntitlement(ImmutableList.<PluginProperty>of(), callContext);
+        aoSubscription.uncancelEntitlement(Collections.emptyList(), callContext);
         assertListenerStatus();
 
         // 2012-06-01
@@ -269,7 +266,7 @@ public class TestUsageInArrear extends TestIntegrationBase {
 
         curInvoice = invoiceChecker.checkInvoice(account.getId(), 3, callContext,
                                                  new ExpectedInvoiceItemCheck(new LocalDate(2012, 5, 1), new LocalDate(2012, 6, 1), InvoiceItemType.USAGE, new BigDecimal("2.95")));
-        invoiceChecker.checkTrackingIds(curInvoice, ImmutableSet.of("tracking-3"), internalCallContext);
+        invoiceChecker.checkTrackingIds(curInvoice, Set.of("tracking-3"), internalCallContext);
 
         // 2012-07-01
         busHandler.pushExpectedEvents(NextEvent.INVOICE, NextEvent.PAYMENT, NextEvent.INVOICE_PAYMENT);
@@ -278,7 +275,7 @@ public class TestUsageInArrear extends TestIntegrationBase {
 
         curInvoice = invoiceChecker.checkInvoice(account.getId(), 4, callContext,
                                                  new ExpectedInvoiceItemCheck(new LocalDate(2012, 6, 1), new LocalDate(2012, 7, 1), InvoiceItemType.USAGE, new BigDecimal("8.85")));
-        invoiceChecker.checkTrackingIds(curInvoice, ImmutableSet.of("tracking-4"), internalCallContext);
+        invoiceChecker.checkTrackingIds(curInvoice, Set.of("tracking-4"), internalCallContext);
     }
 
     @Test(groups = "slow")
@@ -314,7 +311,7 @@ public class TestUsageInArrear extends TestIntegrationBase {
         Invoice curInvoice = invoiceChecker.checkInvoice(account.getId(), 2, callContext,
                                                          new ExpectedInvoiceItemCheck(new LocalDate(2012, 5, 1), new LocalDate(2013, 5, 1), InvoiceItemType.RECURRING, new BigDecimal("2399.95")),
                                                          new ExpectedInvoiceItemCheck(new LocalDate(2012, 4, 1), new LocalDate(2012, 5, 1), InvoiceItemType.USAGE, new BigDecimal("5.90")));
-        invoiceChecker.checkTrackingIds(curInvoice, ImmutableSet.of("tracking-1", "tracking-2"), internalCallContext);
+        invoiceChecker.checkTrackingIds(curInvoice, Set.of("tracking-1", "tracking-2"), internalCallContext);
 
         // $0 invoice
         busHandler.pushExpectedEvents(NextEvent.INVOICE);
@@ -323,7 +320,7 @@ public class TestUsageInArrear extends TestIntegrationBase {
 
         curInvoice = invoiceChecker.checkInvoice(account.getId(), 3, callContext,
                                                  new ExpectedInvoiceItemCheck(new LocalDate(2012, 5, 1), new LocalDate(2012, 6, 1), InvoiceItemType.USAGE, BigDecimal.ZERO));
-        invoiceChecker.checkTrackingIds(curInvoice, ImmutableSet.of(), internalCallContext);
+        invoiceChecker.checkTrackingIds(curInvoice, Collections.emptySet(), internalCallContext);
 
         recordUsageData(aoSubscription.getId(), "tracking-3", "bullets", new LocalDate(2012, 6, 1), BigDecimal.valueOf(50L), callContext);
         recordUsageData(aoSubscription.getId(), "tracking-4", "bullets", new LocalDate(2012, 6, 16), BigDecimal.valueOf(300L), callContext);
@@ -334,7 +331,7 @@ public class TestUsageInArrear extends TestIntegrationBase {
 
         curInvoice = invoiceChecker.checkInvoice(account.getId(), 4, callContext,
                                                  new ExpectedInvoiceItemCheck(new LocalDate(2012, 6, 1), new LocalDate(2012, 7, 1), InvoiceItemType.USAGE, new BigDecimal("11.80")));
-        invoiceChecker.checkTrackingIds(curInvoice, ImmutableSet.of("tracking-3", "tracking-4"), internalCallContext);
+        invoiceChecker.checkTrackingIds(curInvoice, Set.of("tracking-3", "tracking-4"), internalCallContext);
 
         // Should be ignored because this is outside of optimization range (org.killbill.invoice.readMaxRawUsagePreviousPeriod = 2) => we will only look for items > 2012-7-1 - 2 months = 2012-5-1
         recordUsageData(aoSubscription.getId(), "tracking-5", "bullets", new LocalDate(2012, 4, 30), BigDecimal.valueOf(100L), callContext);
@@ -357,7 +354,7 @@ public class TestUsageInArrear extends TestIntegrationBase {
         curInvoice = invoiceChecker.checkInvoice(account.getId(), 5, callContext,
                                                  new ExpectedInvoiceItemCheck(new LocalDate(2012, 5, 1), new LocalDate(2012, 6, 1), InvoiceItemType.USAGE, new BigDecimal("5.90")),
                                                  new ExpectedInvoiceItemCheck(new LocalDate(2012, 7, 1), new LocalDate(2012, 8, 1), InvoiceItemType.USAGE, new BigDecimal("11.80")));
-        invoiceChecker.checkTrackingIds(curInvoice, ImmutableSet.of("tracking-6", "tracking-7", "tracking-8"), internalCallContext);
+        invoiceChecker.checkTrackingIds(curInvoice, Set.of("tracking-6", "tracking-7", "tracking-8"), internalCallContext);
 
         // Add a few more month of usage data and check correctness of invoice: iterate 8 times until 2013-4-1 (prior ANNUAL renewal)
         LocalDate startDate = new LocalDate(2012, 8, 1);
@@ -373,7 +370,7 @@ public class TestUsageInArrear extends TestIntegrationBase {
 
             curInvoice = invoiceChecker.checkInvoice(account.getId(), currentInvoice, callContext,
                                                      new ExpectedInvoiceItemCheck(startDate, startDate.plusMonths(1), InvoiceItemType.USAGE, new BigDecimal("11.80")));
-            invoiceChecker.checkTrackingIds(curInvoice, ImmutableSet.of(trackingId), internalCallContext);
+            invoiceChecker.checkTrackingIds(curInvoice, Set.of(trackingId), internalCallContext);
 
             startDate = startDate.plusMonths(1);
             currentInvoice++;
@@ -421,13 +418,13 @@ public class TestUsageInArrear extends TestIntegrationBase {
         final Invoice secondInvoice = invoiceChecker.checkInvoice(account.getId(), 2, callContext,
                                                                   new ExpectedInvoiceItemCheck(new LocalDate(2012, 5, 1), new LocalDate(2013, 5, 1), InvoiceItemType.RECURRING, new BigDecimal("2399.95")),
                                                                   new ExpectedInvoiceItemCheck(new LocalDate(2012, 4, 1), new LocalDate(2012, 5, 1), InvoiceItemType.USAGE, new BigDecimal("5.90")));
-        invoiceChecker.checkTrackingIds(secondInvoice, ImmutableSet.of("t1", "t2"), internalCallContext);
+        invoiceChecker.checkTrackingIds(secondInvoice, Set.of("t1", "t2"), internalCallContext);
 
         // Change to the Slugs plan
         busHandler.pushExpectedEvents(NextEvent.CREATE, NextEvent.INVOICE);
         aoSubscription.changePlanWithDate(new DefaultEntitlementSpecifier(new PlanPhaseSpecifier("slugs-usage-in-arrear")),
                                           new LocalDate(2012, 4, 1),
-                                          ImmutableList.<PluginProperty>of(),
+                                          Collections.emptyList(),
                                           callContext);
         assertListenerStatus();
 
@@ -435,10 +432,10 @@ public class TestUsageInArrear extends TestIntegrationBase {
         final Invoice updatedSecondInvoice = invoiceChecker.checkInvoice(account.getId(), 2, callContext,
                                                                          new ExpectedInvoiceItemCheck(new LocalDate(2012, 5, 1), new LocalDate(2013, 5, 1), InvoiceItemType.RECURRING, new BigDecimal("2399.95")),
                                                                          new ExpectedInvoiceItemCheck(new LocalDate(2012, 4, 1), new LocalDate(2012, 5, 1), InvoiceItemType.USAGE, new BigDecimal("5.90")));
-        invoiceChecker.checkTrackingIds(updatedSecondInvoice, ImmutableSet.of("t1", "t2"), internalCallContext);
+        invoiceChecker.checkTrackingIds(updatedSecondInvoice, Set.of("t1", "t2"), internalCallContext);
         final Invoice thirdInvoice = invoiceChecker.checkInvoice(account.getId(), 3, callContext,
                                                                  new ExpectedInvoiceItemCheck(new LocalDate(2012, 4, 1), new LocalDate(2012, 5, 1), InvoiceItemType.USAGE, BigDecimal.ZERO));
-        invoiceChecker.checkTrackingIds(thirdInvoice, ImmutableSet.of(), internalCallContext);
+        invoiceChecker.checkTrackingIds(thirdInvoice, Collections.emptySet(), internalCallContext);
 
         // Add usage data
         recordUsageData(aoSubscription.getId(), "u1", "slugs", new LocalDate(2012, 4, 1), BigDecimal.valueOf(99L), callContext);
@@ -454,7 +451,7 @@ public class TestUsageInArrear extends TestIntegrationBase {
 
         final Invoice fourthInvoice = invoiceChecker.checkInvoice(account.getId(), 4, callContext,
                                                                   new ExpectedInvoiceItemCheck(new LocalDate(2012, 4, 1), new LocalDate(2012, 5, 1), InvoiceItemType.USAGE, new BigDecimal("4")));
-        invoiceChecker.checkTrackingIds(fourthInvoice, ImmutableSet.of("u1", "u2"), internalCallContext);
+        invoiceChecker.checkTrackingIds(fourthInvoice, Set.of("u1", "u2"), internalCallContext);
     }
 
     @Test(groups = "slow")
@@ -489,7 +486,7 @@ public class TestUsageInArrear extends TestIntegrationBase {
         Invoice curInvoice = invoiceChecker.checkInvoice(account.getId(), 2, callContext,
                                                          new ExpectedInvoiceItemCheck(new LocalDate(2012, 5, 1), new LocalDate(2013, 5, 1), InvoiceItemType.RECURRING, new BigDecimal("2399.95")),
                                                          new ExpectedInvoiceItemCheck(new LocalDate(2012, 4, 1), new LocalDate(2012, 5, 1), InvoiceItemType.USAGE, new BigDecimal("5.90")));
-        invoiceChecker.checkTrackingIds(curInvoice, ImmutableSet.of("t1", "t2"), internalCallContext);
+        invoiceChecker.checkTrackingIds(curInvoice, Set.of("t1", "t2"), internalCallContext);
 
         recordUsageData(aoSubscription.getId(), "t3", "bullets", new LocalDate(2012, 5, 3), BigDecimal.valueOf(99L), callContext);
         recordUsageData(aoSubscription.getId(), "t4", "bullets", new LocalDate(2012, 5, 5), BigDecimal.valueOf(100L), callContext);
@@ -499,12 +496,12 @@ public class TestUsageInArrear extends TestIntegrationBase {
 
         clock.addDays(27);
         busHandler.pushExpectedEvents(NextEvent.BLOCK, NextEvent.CANCEL, NextEvent.INVOICE, NextEvent.PAYMENT, NextEvent.INVOICE_PAYMENT);
-        aoSubscription.cancelEntitlementWithDateOverrideBillingPolicy(new LocalDate(2012, 5, 28), BillingActionPolicy.IMMEDIATE, ImmutableList.<PluginProperty>of(), callContext);
+        aoSubscription.cancelEntitlementWithDateOverrideBillingPolicy(new LocalDate(2012, 5, 28), BillingActionPolicy.IMMEDIATE, Collections.emptyList(), callContext);
         assertListenerStatus();
 
         curInvoice = invoiceChecker.checkInvoice(account.getId(), 3, callContext,
                                                  new ExpectedInvoiceItemCheck(new LocalDate(2012, 5, 1), new LocalDate(2012, 5, 28), InvoiceItemType.USAGE, new BigDecimal("5.90")));
-        invoiceChecker.checkTrackingIds(curInvoice, ImmutableSet.of("t3", "t4"), internalCallContext);
+        invoiceChecker.checkTrackingIds(curInvoice, Set.of("t3", "t4"), internalCallContext);
 
         busHandler.pushExpectedEvent(NextEvent.NULL_INVOICE);
         clock.addDays(4);
@@ -538,7 +535,7 @@ public class TestUsageInArrear extends TestIntegrationBase {
 
         Invoice curInvoice = invoiceChecker.checkInvoice(account.getId(), 1, callContext,
                                                          new ExpectedInvoiceItemCheck(new LocalDate(2012, 4, 1), new LocalDate(2012, 5, 1), InvoiceItemType.USAGE, new BigDecimal("1000")));
-        invoiceChecker.checkTrackingIds(curInvoice, ImmutableSet.of("xxx-1", "xxx-2"), internalCallContext);
+        invoiceChecker.checkTrackingIds(curInvoice, Set.of("xxx-1", "xxx-2"), internalCallContext);
 
         final DateTime firstExpectedCTD = account.getReferenceTime().withMonthOfYear(5).withDayOfMonth(1);
         assertEquals(subscriptionBaseInternalApiApi.getSubscriptionFromId(bpSubscription.getId(), internalCallContext).getChargedThroughDate().compareTo(firstExpectedCTD), 0);
@@ -550,7 +547,7 @@ public class TestUsageInArrear extends TestIntegrationBase {
 
         curInvoice = invoiceChecker.checkInvoice(account.getId(), 2, callContext,
                                                  new ExpectedInvoiceItemCheck(new LocalDate(2012, 5, 1), new LocalDate(2012, 6, 1), InvoiceItemType.USAGE, BigDecimal.ZERO));
-        invoiceChecker.checkTrackingIds(curInvoice, ImmutableSet.of(), internalCallContext);
+        invoiceChecker.checkTrackingIds(curInvoice, Collections.emptySet(), internalCallContext);
 
         final DateTime secondExpectedCTD = account.getReferenceTime().withMonthOfYear(6).withDayOfMonth(1);
 
@@ -566,7 +563,7 @@ public class TestUsageInArrear extends TestIntegrationBase {
 
         curInvoice = invoiceChecker.checkInvoice(account.getId(), 3, callContext,
                                                  new ExpectedInvoiceItemCheck(new LocalDate(2012, 6, 1), new LocalDate(2012, 7, 1), InvoiceItemType.USAGE, new BigDecimal("100")));
-        invoiceChecker.checkTrackingIds(curInvoice, ImmutableSet.of("xxx-3", "xxx-4"), internalCallContext);
+        invoiceChecker.checkTrackingIds(curInvoice, Set.of("xxx-3", "xxx-4"), internalCallContext);
 
         final DateTime thirdExpectedCTD = account.getReferenceTime().withMonthOfYear(7).withDayOfMonth(1);
         assertEquals(subscriptionBaseInternalApiApi.getSubscriptionFromId(bpSubscription.getId(), internalCallContext).getChargedThroughDate().compareTo(thirdExpectedCTD), 0);
@@ -589,25 +586,25 @@ public class TestUsageInArrear extends TestIntegrationBase {
         final DefaultEntitlement bp2 = createBaseEntitlementAndCheckForCompletion(account.getId(), "bundleKey2", "Trebuchet", ProductCategory.BASE, BillingPeriod.NO_BILLING_PERIOD, NextEvent.CREATE, NextEvent.BLOCK, NextEvent.NULL_INVOICE);
         subscriptionChecker.checkSubscriptionCreated(bp2.getId(), internalCallContext);
 
-        final List<UsageRecord> bp1StoneRecords1 = new ArrayList();
+        final List<UsageRecord> bp1StoneRecords1 = new ArrayList<>();
         bp1StoneRecords1.add(new UsageRecord(new LocalDate(2012, 4, 5), BigDecimal.valueOf(5L)));
         bp1StoneRecords1.add(new UsageRecord(new LocalDate(2012, 4, 15), BigDecimal.valueOf(10L)));
         bp1StoneRecords1.add(new UsageRecord(new LocalDate(2012, 4, 16), BigDecimal.valueOf(15L)));
-        final SubscriptionUsageRecord bp1UsageRecord1 = new SubscriptionUsageRecord(bp1.getId(), "bp1-tracking-1", ImmutableList.of(new UnitUsageRecord("stones", bp1StoneRecords1)));
+        final SubscriptionUsageRecord bp1UsageRecord1 = new SubscriptionUsageRecord(bp1.getId(), "bp1-tracking-1", List.of(new UnitUsageRecord("stones", bp1StoneRecords1)));
         recordUsageData(bp1UsageRecord1, callContext);
 
-        final List<UsageRecord> bp1StoneRecords2 = new ArrayList();
+        final List<UsageRecord> bp1StoneRecords2 = new ArrayList<>();
         bp1StoneRecords2.add(new UsageRecord(new LocalDate(2012, 4, 23), BigDecimal.valueOf(10L)));
         // Outside of range for this period -> Its tracking ID spreads across 2 invoices
         bp1StoneRecords2.add(new UsageRecord(new LocalDate(2012, 5, 1), BigDecimal.valueOf(101L)));
-        final SubscriptionUsageRecord bp1UsageRecord2 = new SubscriptionUsageRecord(bp1.getId(), "bp1-tracking-2", ImmutableList.of(new UnitUsageRecord("stones", bp1StoneRecords2)));
+        final SubscriptionUsageRecord bp1UsageRecord2 = new SubscriptionUsageRecord(bp1.getId(), "bp1-tracking-2", List.of(new UnitUsageRecord("stones", bp1StoneRecords2)));
         recordUsageData(bp1UsageRecord2, callContext);
 
-        final List<UsageRecord> bp2StoneRecords = new ArrayList();
+        final List<UsageRecord> bp2StoneRecords = new ArrayList<>();
         bp2StoneRecords.add(new UsageRecord(new LocalDate(2012, 4, 5), BigDecimal.valueOf(85L)));
         bp2StoneRecords.add(new UsageRecord(new LocalDate(2012, 4, 15), BigDecimal.valueOf(150L)));
         bp2StoneRecords.add(new UsageRecord(new LocalDate(2012, 4, 16), BigDecimal.valueOf(39L)));
-        final SubscriptionUsageRecord bp2UsageRecord = new SubscriptionUsageRecord(bp2.getId(), "bp2-tracking-1", ImmutableList.of(new UnitUsageRecord("stones", bp2StoneRecords)));
+        final SubscriptionUsageRecord bp2UsageRecord = new SubscriptionUsageRecord(bp2.getId(), "bp2-tracking-1", List.of(new UnitUsageRecord("stones", bp2StoneRecords)));
         recordUsageData(bp2UsageRecord, callContext);
 
         busHandler.pushExpectedEvents(NextEvent.INVOICE, NextEvent.PAYMENT, NextEvent.INVOICE_PAYMENT);
@@ -618,7 +615,7 @@ public class TestUsageInArrear extends TestIntegrationBase {
                                                          new ExpectedInvoiceItemCheck(new LocalDate(2012, 4, 1), new LocalDate(2012, 5, 1), InvoiceItemType.USAGE, new BigDecimal("100")),
                                                          new ExpectedInvoiceItemCheck(new LocalDate(2012, 4, 1), new LocalDate(2012, 5, 1), InvoiceItemType.USAGE, new BigDecimal("1000")));
 
-        invoiceChecker.checkTrackingIds(curInvoice, ImmutableSet.of("bp1-tracking-1", "bp1-tracking-2", "bp2-tracking-1"), internalCallContext);
+        invoiceChecker.checkTrackingIds(curInvoice, Set.of("bp1-tracking-1", "bp1-tracking-2", "bp2-tracking-1"), internalCallContext);
 
         busHandler.pushExpectedEvents(NextEvent.INVOICE, NextEvent.PAYMENT, NextEvent.INVOICE_PAYMENT);
         clock.addMonths(1);
@@ -628,7 +625,7 @@ public class TestUsageInArrear extends TestIntegrationBase {
                                                  new ExpectedInvoiceItemCheck(new LocalDate(2012, 5, 1), new LocalDate(2012, 6, 1), InvoiceItemType.USAGE, new BigDecimal("0")),
                                                  new ExpectedInvoiceItemCheck(new LocalDate(2012, 5, 1), new LocalDate(2012, 6, 1), InvoiceItemType.USAGE, new BigDecimal("1000")));
 
-        invoiceChecker.checkTrackingIds(curInvoice, ImmutableSet.of("bp1-tracking-2"), internalCallContext);
+        invoiceChecker.checkTrackingIds(curInvoice, Set.of("bp1-tracking-2"), internalCallContext);
 
     }
 
@@ -662,13 +659,13 @@ public class TestUsageInArrear extends TestIntegrationBase {
 
         final Invoice firstInvoice = invoiceChecker.checkInvoice(account.getId(), 1, callContext,
                                                                  new ExpectedInvoiceItemCheck(new LocalDate(2012, 4, 1), new LocalDate(2012, 5, 1), InvoiceItemType.USAGE, new BigDecimal("1000")));
-        invoiceChecker.checkTrackingIds(firstInvoice, ImmutableSet.of("xxx-1", "xxx-2"), internalCallContext);
+        invoiceChecker.checkTrackingIds(firstInvoice, Set.of("xxx-1", "xxx-2"), internalCallContext);
 
         // Void the first invoice
         busHandler.pushExpectedEvents(NextEvent.INVOICE_ADJUSTMENT);
         invoiceUserApi.voidInvoice(firstInvoice.getId(), callContext);
         assertListenerStatus();
-        invoiceChecker.checkTrackingIds(firstInvoice, ImmutableSet.of(), internalCallContext);
+        invoiceChecker.checkTrackingIds(firstInvoice, Collections.emptySet(), internalCallContext);
 
         // Regenerate the invoice
         busHandler.pushExpectedEvents(NextEvent.INVOICE, NextEvent.INVOICE_PAYMENT_ERROR);
@@ -682,7 +679,7 @@ public class TestUsageInArrear extends TestIntegrationBase {
         final Invoice secondInvoice = invoiceChecker.checkInvoice(account.getId(), 1, callContext,
                                                                   new ExpectedInvoiceItemCheck(new LocalDate(2012, 4, 1), new LocalDate(2012, 5, 1), InvoiceItemType.USAGE, new BigDecimal("1000")));
         assertNotEquals(firstInvoice.getId(), secondInvoice.getId());
-        invoiceChecker.checkTrackingIds(secondInvoice, ImmutableSet.of("xxx-1", "xxx-2"), internalCallContext);
+        invoiceChecker.checkTrackingIds(secondInvoice, Set.of("xxx-1", "xxx-2"), internalCallContext);
     }
 
     @Test(groups = "slow")
@@ -715,16 +712,16 @@ public class TestUsageInArrear extends TestIntegrationBase {
         clock.addDays(30);
         assertListenerStatus();
 
-        Invoice curInvoice = invoiceChecker.checkInvoice(account.getId(), 2, callContext,
-                                                         new ExpectedInvoiceItemCheck(new LocalDate(2012, 5, 1), new LocalDate(2013, 5, 1), InvoiceItemType.RECURRING, new BigDecimal("2399.95")),
-                                                         new ExpectedInvoiceItemCheck(new LocalDate(2012, 4, 1), new LocalDate(2012, 5, 1), InvoiceItemType.USAGE, new BigDecimal("5.90")));
-        invoiceChecker.checkTrackingIds(curInvoice, ImmutableSet.of("tracking-1", "tracking-2"), internalCallContext);
+        final Invoice curInvoice = invoiceChecker.checkInvoice(account.getId(), 2, callContext,
+                                                               new ExpectedInvoiceItemCheck(new LocalDate(2012, 5, 1), new LocalDate(2013, 5, 1), InvoiceItemType.RECURRING, new BigDecimal("2399.95")),
+                                                               new ExpectedInvoiceItemCheck(new LocalDate(2012, 4, 1), new LocalDate(2012, 5, 1), InvoiceItemType.USAGE, new BigDecimal("5.90")));
+        invoiceChecker.checkTrackingIds(curInvoice, Set.of("tracking-1", "tracking-2"), internalCallContext);
 
         // 2012-04-21 -- block billing effective date is 2012-04-16
         clock.addDays(20);
         busHandler.pushExpectedEvents(NextEvent.BLOCK, NextEvent.INVOICE);
         final BlockingState blockingState1 = new DefaultBlockingState(bpSubscription.getBundleId(), BlockingStateType.SUBSCRIPTION_BUNDLE, "state1", "Service", true, true, true, null);
-        subscriptionApi.addBlockingState(blockingState1, new LocalDate(2012, 4, 16), ImmutableList.<PluginProperty>of(), callContext);
+        subscriptionApi.addBlockingState(blockingState1, new LocalDate(2012, 4, 16), Collections.emptyList(), callContext);
         assertListenerStatus();
 
         // Behavior notes:
@@ -765,16 +762,16 @@ public class TestUsageInArrear extends TestIntegrationBase {
         clock.addDays(30);
         assertListenerStatus();
 
-        Invoice curInvoice = invoiceChecker.checkInvoice(account.getId(), 2, callContext,
-                                                         new ExpectedInvoiceItemCheck(new LocalDate(2012, 5, 1), new LocalDate(2013, 5, 1), InvoiceItemType.RECURRING, new BigDecimal("2399.95")),
-                                                         new ExpectedInvoiceItemCheck(new LocalDate(2012, 4, 1), new LocalDate(2012, 5, 1), InvoiceItemType.USAGE, new BigDecimal("5.90")));
-        invoiceChecker.checkTrackingIds(curInvoice, ImmutableSet.of("tracking-1", "tracking-2"), internalCallContext);
+        final Invoice curInvoice = invoiceChecker.checkInvoice(account.getId(), 2, callContext,
+                                                               new ExpectedInvoiceItemCheck(new LocalDate(2012, 5, 1), new LocalDate(2013, 5, 1), InvoiceItemType.RECURRING, new BigDecimal("2399.95")),
+                                                               new ExpectedInvoiceItemCheck(new LocalDate(2012, 4, 1), new LocalDate(2012, 5, 1), InvoiceItemType.USAGE, new BigDecimal("5.90")));
+        invoiceChecker.checkTrackingIds(curInvoice, Set.of("tracking-1", "tracking-2"), internalCallContext);
 
         // 2012-05-21 -- block billing effective date is 2012-04-01
         clock.addDays(20);
         busHandler.pushExpectedEvents(NextEvent.BLOCK, NextEvent.INVOICE);
         final BlockingState blockingState1 = new DefaultBlockingState(bpSubscription.getBundleId(), BlockingStateType.SUBSCRIPTION_BUNDLE, "state1", "Service", true, true, true, null);
-        subscriptionApi.addBlockingState(blockingState1, new LocalDate(2012, 4, 1), ImmutableList.<PluginProperty>of(), callContext);
+        subscriptionApi.addBlockingState(blockingState1, new LocalDate(2012, 4, 1), Collections.emptyList(), callContext);
         assertListenerStatus();
 
         // Note that the usage is left untouched despite the blocking event
